--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -431,7 +431,7 @@
         margin-right: auto;
     }
 
-   
+
     .uce-text h3 {
         font-weight: 200;
         font-size: 132px;
@@ -2868,12 +2868,18 @@
     .app-modal .modal-dialog .modal-body .app-modal-text p {
         font-size: 16px;
     }
-    .app-modal .modal-dialog .btn-close{
+
+    .app-modal .modal-dialog .btn-close {
         right: 20px;
     }
-    .app-modal-text-scroll{
+
+    .app-modal-text-scroll {
         max-height: 300px;
         overflow-y: auto;
         padding: 0 30px;
+    }
+
+    .invest-bar-text p {
+        font-size: 18px;
     }
 }
