--- a/assets/scss/layouts/_header.scss
+++ b/assets/scss/layouts/_header.scss
@@ -1,3 +1,66 @@
+.invest-bar {
+    // background: #0AE02D;
+    background: url("../img/invest-bar-bg.png") no-repeat center / cover;
+    padding: 0 20px;
+    position: sticky;
+    top: 0;
+    z-index: 99990;
+
+    &-text {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 12px;
+
+        p {
+            color: black;
+            font-size: 28px;
+            font-weight: 400;
+            line-height: 31px;
+            letter-spacing: 0.78px;
+            word-wrap: break-word
+        }
+
+        a {
+            background: #fff;
+            padding: 10px;
+            border-radius: 10px;
+            // Learn more
+            color: black;
+            font-size: 15px;
+            font-family: Manrope;
+            font-weight: 600;
+            line-height: 20px;
+            word-wrap: break-word
+        }
+
+        &-wrap {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+        }
+    }
+
+    &-content {
+        position: relative;
+        padding: 8px 0;
+    }
+
+    .tSocial {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        gap: 18px;
+        a{
+            color: #000;
+            font-size: 20px;
+        }
+    }
+}
+
 .navbar {
     padding: 40px 0 30px;
     background: transparent;
@@ -14,7 +77,9 @@
         @media (min-width: 1600px) {
             gap: 50px;
         }
+
         gap: 35px;
+
         // .the-header-logo{
         //     width: 290px;
         // }
@@ -27,10 +92,12 @@
                     color: #000000;
                 }
             }
-            @media (min-width:1600px){
+
+            @media (min-width:1600px) {
                 margin-left: 50px;
             }
-            @media (max-width:1600px){
+
+            @media (max-width:1600px) {
                 margin-left: 35px;
             }
         }
@@ -85,29 +152,4 @@
         }
     }
 
-}
-
-.invest-bar{
-    position: absolute;
-    background: rgba(0,0,0,0);
-    width: 100%;
-    z-index: 3;
-    padding: 13px 0 0;
-}
-
-.tSocial{
-    text-align: right;
-
-    a {
-        color: #000;
-    font-size: 20px;
-
-        &:hover {
-            color: #000;
-        }
-
-        &+a {
-            margin-left: 12px;
-        }
-    }
 }
